// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Info /> should show a loader when there are no results yet 1`] = `
<div
  className="jsx-3536369025"
>
  <span
    className="jsx-904518150"
  >
    <img
      className="jsx-904518150"
      src="/static/loading.gif"
    />
  </span>
</div>
`;

exports[`<Info /> should show an empty state when no results are found 1`] = `
<div
  className="jsx-3536369025"
>
  <span
    className="jsx-3536369025"
  >
    Nothing Found
  </span>
</div>
`;

exports[`<Info /> should show the total results if any are present 1`] = `
<div
  className="jsx-3536369025"
>
  <span
    className="jsx-3536369025"
  >
    2 Results
  </span>
</div>
`;
